Implémentation du système de notifications